# RagMark

./: .gitignore  LICENSE  README.md  pyproject.toml
ragmark/: __init__.py  config.py  core.py  ragmark.yaml  utils.py
tests/: test_ragmark.py
